[package]
name = "rust-candle-chatbot"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", branch = "main", default-features = false }
candle-nn = { git = "https://github.com/huggingface/candle.git", branch = "main", default-features = false }
candle-transformers = { git = "https://github.com/huggingface/candle.git", branch = "main", default-features = false }
tokenizers = { version = "0.20", features = ["http"] }
hf-hub = { version = "0.3", features = ["tokio"] }
cursive = { version = "0.21", default-features = false, features = ["crossterm-backend"] }
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1